[package]
name = "art_practice"
version = "0.1.2"
authors = ["krzyz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
serde = { version = "1.0", features = ["rc"] }
directories = "4.0.1"
ron = "0.8.0"

[dependencies.druid]
version = "0.7.0"
features = ["image-all"]
